Update agriculture_chatbot_cohere_ with embeddings .ipynb

--- a/agriculture_chatbot_cohere_.ipynb
+++ b/agriculture_chatbot_cohere_.ipynb
@@ -114,7 +114,7 @@
         "import numpy as np\n",
         "\n",
         "# Initialize Cohere\n",
-        "cohere_client = cohere.Client(\"gk8InFH4kP2H0wu8lTTpAyF8fDgvvnLbQs7wSaxy\")\n",
+        "cohere_client = cohere.Client(\"api key \")\n",
         "\n",
         "# Define the corpus\n",
         "corpus = \"\"\"\n",
