--- a/agricultural_chatbot_unsuccessful_model_with_command_x_large_with_poor_output_.ipynb
+++ b/agricultural_chatbot_unsuccessful_model_with_command_x_large_with_poor_output_.ipynb
@@ -108,7 +108,7 @@
         "import cohere\n",
         "\n",
         "# Initialize Cohere\n",
-        "cohere_client = cohere.Client(\"sqRIGeflZMEWBUZWHMQu5Idii0s5TvoK7chPND79\")  # Replace with your actual API key\n",
+        "cohere_client = cohere.Client(\"api key\")  # Replace with your actual API key\n",
         "\n",
         "def get_simple_response(query_text):\n",
         "    try:\n",
