--- a/kisan_charbot_in_hindi_on_cohere_by_command_xlarge_model_.ipynb
+++ b/kisan_charbot_in_hindi_on_cohere_by_command_xlarge_model_.ipynb
@@ -110,7 +110,7 @@
       "source": [
         "import cohere\n",
         "\n",
-        "api_key = 'SdVfYdLGvn8U1Fz5d06wqVP7V2i3m1EMAoA2Mvgp'\n",
+        "api_key = 'API KEY'\n",
         "co = cohere.Client(api_key)\n",
         "\n",
         "# Sample function to get a response from the Cohere API\n",
