--- a/Cohere_successful_ayurveda_chatbot_hindi_english_and_sanskrit_.ipynb
+++ b/Cohere_successful_ayurveda_chatbot_hindi_english_and_sanskrit_.ipynb
@@ -246,7 +246,7 @@
         "from deep_translator import GoogleTranslator\n",
         "\n",
         "# Initialize Cohere client with your API key\n",
-        "api_key = 'zCPmT7x4PGflCidR5nqzgzFXYxVOuIh2mDQJajDX'  # Replace with your actual API key\n",
+        "api_key = 'API'  # Replace with your actual API key\n",
         "co = cohere.Client(api_key)\n",
         "\n",
         "# Initialize the translator\n",
