--- a/Cohere_Charak_Samhita_Q_and_A_LLM_Output_Eng_,_hindi_,_sanskrit_.ipynb
+++ b/Cohere_Charak_Samhita_Q_and_A_LLM_Output_Eng_,_hindi_,_sanskrit_.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -81,7 +81,7 @@
         "id": "GnJspFabxVCJ",
         "outputId": "33d806ca-a38f-4792-ba7c-8541ee37bd77"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,7 +112,67 @@
         "id": "5wCyfFeryA4K",
         "outputId": "d9c5399d-87c4-4a67-ac9f-36be4f135fe3"
       },
-      "execution_count": 10,
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: cohere in /usr/local/lib/python3.10/dist-packages (5.6.2)\n",
+            "Requirement already satisfied: pymupdf in /usr/local/lib/python3.10/dist-packages (1.24.9)\n",
+            "Requirement already satisfied: deep-translator in /usr/local/lib/python3.10/dist-packages (1.11.4)\n",
+            "Requirement already satisfied: boto3<2.0.0,>=1.34.0 in /usr/local/lib/python3.10/dist-packages (from cohere) (1.34.151)\n",
+            "Requirement already satisfied: fastavro<2.0.0,>=1.9.4 in /usr/local/lib/python3.10/dist-packages (from cohere) (1.9.5)\n",
+            "Requirement already satisfied: httpx>=0.21.2 in /usr/local/lib/python3.10/dist-packages (from cohere) (0.27.0)\n",
+            "Requirement already satisfied: httpx-sse<0.5.0,>=0.4.0 in /usr/local/lib/python3.10/dist-packages (from cohere) (0.4.0)\n",
+            "Requirement already satisfied: parameterized<0.10.0,>=0.9.0 in /usr/local/lib/python3.10/dist-packages (from cohere) (0.9.0)\n",
+            "Requirement already satisfied: pydantic>=1.9.2 in /usr/local/lib/python3.10/dist-packages (from cohere) (2.8.2)\n",
+            "Requirement already satisfied: requests<3.0.0,>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from cohere) (2.31.0)\n",
+            "Requirement already satisfied: tokenizers<1,>=0.15 in /usr/local/lib/python3.10/dist-packages (from cohere) (0.19.1)\n",
+            "Requirement already satisfied: types-requests<3.0.0,>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from cohere) (2.32.0.20240712)\n",
+            "Requirement already satisfied: typing_extensions>=4.0.0 in /usr/local/lib/python3.10/dist-packages (from cohere) (4.12.2)\n",
+            "Requirement already satisfied: PyMuPDFb==1.24.9 in /usr/local/lib/python3.10/dist-packages (from pymupdf) (1.24.9)\n",
+            "Requirement already satisfied: beautifulsoup4<5.0.0,>=4.9.1 in /usr/local/lib/python3.10/dist-packages (from deep-translator) (4.12.3)\n",
+            "Requirement already satisfied: soupsieve>1.2 in /usr/local/lib/python3.10/dist-packages (from beautifulsoup4<5.0.0,>=4.9.1->deep-translator) (2.5)\n",
+            "Requirement already satisfied: botocore<1.35.0,>=1.34.151 in /usr/local/lib/python3.10/dist-packages (from boto3<2.0.0,>=1.34.0->cohere) (1.34.151)\n",
+            "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in /usr/local/lib/python3.10/dist-packages (from boto3<2.0.0,>=1.34.0->cohere) (1.0.1)\n",
+            "Requirement already satisfied: s3transfer<0.11.0,>=0.10.0 in /usr/local/lib/python3.10/dist-packages (from boto3<2.0.0,>=1.34.0->cohere) (0.10.2)\n",
+            "Requirement already satisfied: anyio in /usr/local/lib/python3.10/dist-packages (from httpx>=0.21.2->cohere) (3.7.1)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from httpx>=0.21.2->cohere) (2024.7.4)\n",
+            "Requirement already satisfied: httpcore==1.* in /usr/local/lib/python3.10/dist-packages (from httpx>=0.21.2->cohere) (1.0.5)\n",
+            "Requirement already satisfied: idna in /usr/local/lib/python3.10/dist-packages (from httpx>=0.21.2->cohere) (3.7)\n",
+            "Requirement already satisfied: sniffio in /usr/local/lib/python3.10/dist-packages (from httpx>=0.21.2->cohere) (1.3.1)\n",
+            "Requirement already satisfied: h11<0.15,>=0.13 in /usr/local/lib/python3.10/dist-packages (from httpcore==1.*->httpx>=0.21.2->cohere) (0.14.0)\n",
+            "Requirement already satisfied: annotated-types>=0.4.0 in /usr/local/lib/python3.10/dist-packages (from pydantic>=1.9.2->cohere) (0.7.0)\n",
+            "Requirement already satisfied: pydantic-core==2.20.1 in /usr/local/lib/python3.10/dist-packages (from pydantic>=1.9.2->cohere) (2.20.1)\n",
+            "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0,>=2.0.0->cohere) (3.3.2)\n",
+            "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests<3.0.0,>=2.0.0->cohere) (2.0.7)\n",
+            "Requirement already satisfied: huggingface-hub<1.0,>=0.16.4 in /usr/local/lib/python3.10/dist-packages (from tokenizers<1,>=0.15->cohere) (0.23.5)\n",
+            "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /usr/local/lib/python3.10/dist-packages (from botocore<1.35.0,>=1.34.151->boto3<2.0.0,>=1.34.0->cohere) (2.8.2)\n",
+            "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from huggingface-hub<1.0,>=0.16.4->tokenizers<1,>=0.15->cohere) (3.15.4)\n",
+            "Requirement already satisfied: fsspec>=2023.5.0 in /usr/local/lib/python3.10/dist-packages (from huggingface-hub<1.0,>=0.16.4->tokenizers<1,>=0.15->cohere) (2024.6.1)\n",
+            "Requirement already satisfied: packaging>=20.9 in /usr/local/lib/python3.10/dist-packages (from huggingface-hub<1.0,>=0.16.4->tokenizers<1,>=0.15->cohere) (24.1)\n",
+            "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.10/dist-packages (from huggingface-hub<1.0,>=0.16.4->tokenizers<1,>=0.15->cohere) (6.0.1)\n",
+            "Requirement already satisfied: tqdm>=4.42.1 in /usr/local/lib/python3.10/dist-packages (from huggingface-hub<1.0,>=0.16.4->tokenizers<1,>=0.15->cohere) (4.66.4)\n",
+            "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio->httpx>=0.21.2->cohere) (1.2.2)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.35.0,>=1.34.151->boto3<2.0.0,>=1.34.0->cohere) (1.16.0)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pip install cohere pymupdf deep-translator\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-V2lKb0J3zV_",
+        "outputId": "68f4634d-9450-4ba1-d91e-fdd67e012dc6"
+      },
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -168,7 +228,7 @@
         "import fitz  # PyMuPDF\n",
         "\n",
         "# Initialize Cohere client\n",
-        "api_key = 'api key'\n",
+        "api_key = 'H5VKD1il4mSoTkpO5n89rpsQCSclt7ZvSKQ0t1jQ'\n",
         "co = cohere.Client(api_key)\n",
         "\n",
         "# Function to extract text from PDF\n",
@@ -188,7 +248,7 @@
         "    response = co.generate(\n",
         "        model='command-xlarge-nightly',\n",
         "        prompt=f\"Context: {context}\\n\\nQuestion: {question}\\n\\nAnswer:\",\n",
-        "        max_tokens=100,\n",
+        "        max_tokens=200,\n",
         "        temperature=0.5,\n",
         "        stop_sequences=[\"\\n\"]\n",
         "    )\n",
@@ -200,8 +260,8 @@
         "    return translation\n",
         "\n",
         "# Example usage\n",
-        "context = pdf_text[:2000]  # Using first 2000 characters of the text for context\n",
-        "question = \"What is Charak Samhita?\"\n",
+        "context = pdf_text[:10000]  # Using first 5000 characters of the text for context\n",
+        "question = \"what can u tell from this book\"\n",
         "answer_in_english = ask_question(context, question)\n",
         "\n",
         "# Translate the answer to Hindi and Sanskrit\n",
@@ -218,21 +278,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "A0TdFLGtxuhn",
-        "outputId": "135f3784-87d3-49e0-e489-ddf18847a3df"
+        "outputId": "d47ec967-a734-4ad0-8bef-fceeb9ab3ffa"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Question: What is Charak Samhita?\n",
+            "Question: what can u tell from this book\n",
             "\n",
-            "Answer in English: Charak Samhita is an ancient text on Ayurveda, a system of medicine and lifestyle developed in ancient India. It is believed to be one of the earliest texts on Ayurveda and is attributed to the physician Charaka. The text covers a wide range of topics, including health, disease, diagnosis, treatment, and prevention, and is considered a foundational text in the field of Ayurveda.\n",
+            "Answer in English: This book appears to be a collection of poems or song lyrics, as the text is arranged in stanzas with varying line lengths and includes many symbols, such as asterisks and dollar signs, that are commonly used in poetry to indicate pauses or emphasis. The content of the poems seems to be largely abstract and symbolic, with references to nature, spirituality, and personal reflection. The language is often evocative and imagery-rich, creating a sense of mystery and emotional depth.\n",
             "\n",
-            "Answer in Hindi: चरक संहिता आयुर्वेद पर एक प्राचीन ग्रंथ है, जो प्राचीन भारत में विकसित चिकित्सा और जीवनशैली की एक प्रणाली है। इसे आयुर्वेद पर सबसे शुरुआती ग्रंथों में से एक माना जाता है और इसका श्रेय चिकित्सक चरक को दिया जाता है। इस ग्रंथ में स्वास्थ्य, रोग, निदान, उपचार और रोकथाम सहित कई विषयों को शामिल किया गया है और इसे आयुर्वेद के क्षेत्र में एक आधारभूत ग्रंथ माना जाता है।\n",
+            "Answer in Hindi: यह पुस्तक कविताओं या गीतों के बोलों का संग्रह प्रतीत होती है, क्योंकि पाठ को अलग-अलग पंक्तियों की लंबाई के साथ छंदों में व्यवस्थित किया गया है और इसमें कई प्रतीक शामिल हैं, जैसे कि तारांकन और डॉलर के चिह्न, जो आमतौर पर कविता में विराम या जोर देने के लिए उपयोग किए जाते हैं। कविताओं की सामग्री काफी हद तक अमूर्त और प्रतीकात्मक लगती है, जिसमें प्रकृति, आध्यात्मिकता और व्यक्तिगत प्रतिबिंब का संदर्भ है। भाषा अक्सर विचारोत्तेजक और कल्पना-समृद्ध होती है, जो रहस्य और भावनात्मक गहराई की भावना पैदा करती है।\n",
             "\n",
-            "Answer in Sanskrit: चरकसंहिता प्राचीनभारते विकसितस्य चिकित्साव्यवस्थायाः जीवनशैल्याः च आयुर्वेदस्य प्राचीनग्रन्थः अस्ति । आयुर्वेदस्य प्रारम्भिकग्रन्थेषु अन्यतमः इति मन्यते, वैद्यस्य चरकस्य आरोपणं च अस्ति । अस्मिन् ग्रन्थे स्वास्थ्यं, रोगः, निदानं, चिकित्सा, निवारणं च इत्यादयः विस्तृताः विषयाः सन्ति, आयुर्वेदक्षेत्रे आधारभूतः ग्रन्थः इति मन्यते ।\n",
+            "Answer in Sanskrit: एतत् पुस्तकं काव्यस्य वा गीतस्य वा संग्रहः इति भासते, यतः पाठः भिन्नपङ्क्तिदीर्घतायुक्तेषु छन्देषु व्यवस्थितः अस्ति, तत्र ताराचिह्नानि, डॉलरचिह्नानि च इत्यादीनि बहवः चिह्नानि समाविष्टानि सन्ति, येषां उपयोगः काव्येषु सामान्यतया विरामस्य वा बोधस्य वा सूचनाय भवति काव्यानां विषयवस्तु प्रायः अमूर्तं प्रतीकात्मकं च दृश्यते, यत्र प्रकृतिः, आध्यात्मिकता, व्यक्तिगतचिन्तनं च सन्दर्भाः सन्ति । भाषा प्रायः आह्वानात्मका, बिम्बसमृद्धा च भवति, रहस्यस्य भावः, भावनात्मकगहनतायाः च भावः सृजति ।\n",
             "\n"
           ]
         }
