--- a/Cohere_successful_RAG_BASES_ayurveda_chatbot_hindi_english_and_sanskrit_.ipynb
+++ b/Cohere_successful_RAG_BASES_ayurveda_chatbot_hindi_english_and_sanskrit_.ipynb
@@ -132,10 +132,11 @@
         "import cohere\n",
         "\n",
         "# Initialize the Cohere client\n",
-        "co = cohere.Client('zCPmT7x4PGflCidR5nqzgzFXYxVOuIh2mDQJajDX')\n"
+        "co = cohere.Client('abc')\n"
       ],
       "metadata": {
         "id": "LVym6XEi_MXn"
+
       },
       "execution_count": 3,
       "outputs": []
